--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -61,7 +61,7 @@
     %meta{"http-equiv" => "cleartype", content: "on"}
 
     -# Favicon
-    = favicon_link_tag "favicon.png"
+    -# = favicon_link_tag "favicon.png"
     = csrf_meta_tags
 
     -# Production-only scripts
@@ -96,10 +96,6 @@
     .wrap
 
       = yield
-
-    %footer
-      .footer-inner.site-width
-        © #{Date.today.year} OrnHub, all rights reserved.
 
     -# Javascript includes
     = javascript_include_tag "vendor", "data-turbolinks-track": true
