--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -86,12 +86,12 @@
       .growls
         .growl
           .growl-inner
-            Notice
+            %p= notice
     - unless alert.nil?
       .growls
         .growl
           .growl-inner
-            Alert
+            %p= alert
 
     .wrap
 
