--- a/app/assets/stylesheets/_global.sass
+++ b/app/assets/stylesheets/_global.sass
@@ -55,12 +55,17 @@ body
   color: $error !important
 
 .content-inner
-  padding: 20px 0 80px 0
+  padding: 40px 0 80px 0
   position: relative
-  background: darken($light,2)
 
   +breakpoint(mobile)
     padding: 0px 0 100px 0
+
+.content-header
+  font-size: 42px
+
+  a
+    float: right
 
 .strike
   text-decoration: line-through !important
