--- a/app/assets/stylesheets/_bootstrap.sass
+++ b/app/assets/stylesheets/_bootstrap.sass
@@ -65,7 +65,7 @@ button
   padding: 12px 18px
   border: 1px solid $button
   background: $button
-  color: $dark
+  color: #fff
   font-size: 14px
   +bold
   +border-box
@@ -74,90 +74,42 @@ button
 
   &:hover
     background: lighten($button,3)
-    border: 1px solid lighten($button,3)
+    border-color: lighten($button,3)
     color: #fff
 
   &:active
     background: $button !important
-    border: 1px solid $button !important
+    border-color: $button !important
     color: #fff !important
 
   &:focus
     background: $button !important
-    border: 1px solid $button !important
+    border-color: $button !important
     color: #fff !important
 
   i:before
     font-size: 0.9em
 
-  &.warning
-    background: $error !important
-    border-color: $error !important
-    color: #fff !important
-
 .hollow-button,
 input[type=submit].hollow-button
   background: none !important
-  color: darken($light,20) !important
-  border: 1px solid darken($light,10) !important
+  color: $button !important
+  border: 1px solid $button !important
 
   &:hover
     background: none
-    color: darken($light,40) !important
-    border: 1px solid darken($light,20) !important
+    color: $button !important
+    border-color: $button !important
 
   &:active
     background: none !important
-    color: darken($light,40) !important
-    border: 1px solid darken($light,30)
+    color: $button !important
+    border-color: $button
 
   &:focus
     background: none !important
-    color: darken($light,40) !important
-    border: 1px solid darken($light,30)
-
-.green-glow-button
-  @extend .button
-
-.definitely-green-button,
-input[type=submit].definitely-green-button
-  background: $green !important
-  border-color: $green !important
-  color: $dark !important
-  +shadow(0,2px,30px,rgba($green,0.33))
-
-  &:hover
-    background: lighten($green,5) !important
-    color: $dark !important
-    border: 1px solid lighten($green,5) !important
-
-  &:active
-    background: lighten($green,5) !important
-    color: $dark !important
-    border: 1px solid lighten($green,5) !important
-
-  &:focus
-    background: lighten($green,5) !important
-    color: $dark !important
-    border: 1px solid lighten($green,5) !important
-
-.yellow-button
-  background: $alert !important
-  border-color: $alert !important
-  color: $dark !important
-  margin-right: 0 !important
-
-.facebook-button
-  background: #3b5998 !important
-  border-color: #3b5998 !important
-
-  i
-    margin-right: 5px
-
-.delete-button
-  background: $error !important
-  border-color: $error !important
-  @extend .button
+    color: $button !important
+    border-color: $button
 
 input[type=text],
 input[type=email],
@@ -190,11 +142,6 @@ textarea
   line-height: 1.3 !important
   padding: 14px
   height: 300px
-
-.button.delete-button
-  background: $error !important
-  border-color: $error !important
-  color: #fff !important
 
 input[type=text],
 input[type=email],
