--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -1,12 +1,11 @@
+// 1. Find what font you want on Google Font API, then insert it here with the weights you want
 @import url(//fonts.googleapis.com/css?family=Poppins:600,400)
 @import url(//fonts.googleapis.com/css?family=Inconsolata:700)
 $font: 'Poppins', 'Helvetica', 'Arial'
 $codefont: 'Inconsolata'
-$headerfont: 'Poppins', 'Helvetica', 'Arial'
 
 
-// Font weight mixins
-
+// Font weight mixins - these need to line up with the weights above!
 @mixin thin
   font-weight: 400 !important
 @mixin normal
