Further small tweaks

--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -1,18 +1,18 @@
 // 1. Find what font you want on Google Font API, then insert it here with the weights you want
-@import url(//fonts.googleapis.com/css?family=Poppins:600,400)
+@import url(//fonts.googleapis.com/css?family=Sunflower:300,500,700)
 @import url(//fonts.googleapis.com/css?family=Inconsolata:700)
-$font: 'Poppins', 'Helvetica', 'Arial'
+$font: 'Sunflower', 'Helvetica', 'Arial'
 $codefont: 'Inconsolata'
 
 
 // Font weight mixins - these need to line up with the weights above!
 @mixin thin
-  font-weight: 400 !important
+  font-weight: 300 !important
 @mixin normal
-  font-weight: 400 !important
+  font-weight: 300 !important
 @mixin bold
-  font-weight: 600 !important
+  font-weight: 500 !important
 @mixin default
-  font-weight: 600 !important
+  font-weight: 500 !important
 @mixin thick
-  font-weight: 600 !important
+  font-weight: 700 !important
