--- a/app/assets/stylesheets/layouts/_home.sass
+++ b/app/assets/stylesheets/layouts/_home.sass
@@ -7,7 +7,11 @@
 .meme-card
   width: calc(25% - 10px)
   background: darken($light,10)
-  margin-bottom: 12px
+  margin-bottom: 14px
+
+  &.empty-card
+    background: none
+    height: 0
 
 .meme-card--top
 
